--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="chrome=1,IE=edge" />
-	<title>index</title>
+	<title>Carousel</title>
 	<style>
 		html {
 			height:100%;
@@ -26,7 +26,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:100%;height:100%;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?76656"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?84457"></script>
 	</div>
 
 	<!-- end copy -->
@@ -37,17 +37,18 @@
 
 	<div style="display:none" aria-hidden=true>
 
-		<div>Read more</div>
-		<div>Welcome to the new GEUS Bulletin website!</div>
-		<div>NEWS | May 27 2020</div>
+		<div>Read article</div>
+		<div>Late Quaternary history of Lammefjorden, Denmark</div>
+		<div>RESEARCH ARTICLE | June 25 2020</div>
 		<div></div>
-		<div>RESEARCH ARTICLE | JUL 22 2019</div>
-		<div>Microquartz coatings in Upper Jurassic sandstones</div>
-		<div>Preliminary landslide mapping in Greenland</div>
-		<div>RESEARCH ARTICLE | JUN 22 2019</div>
-		<div>RESEARCH ARTICLE | JUN 6 2019</div>
-		<div>Sea-level rise: bridging local and global projections</div>
-		<div>RESEARCH ARTICLE | JUL 1 2019</div>
+		<div>
+</div>
+		<div>REVIEW ARTICLE | May 27 2020</div>
+		<div>Semi-conventional play in the Danish Chalk Group</div>
+		<div>Magnetic susceptibility of ore grades in South Greenland</div>
+		<div>RESEARCH ARTICLE | JUNE 26 2019</div>
+		<div>JOURNAL NEWS | May 27 2020</div>
+		<div>Welcome to the new GEUS Bulletin website!</div>
 
 	</div>
 
