--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="chrome=1,IE=edge" />
-	<title>Carousel</title>
+	<title>Carousel featured articles</title>
 	<style>
 		html {
 			height:100%;
@@ -26,7 +26,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:100%;height:100%;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?84457"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?18465"></script>
 	</div>
 
 	<!-- end copy -->
@@ -37,12 +37,14 @@
 
 	<div style="display:none" aria-hidden=true>
 
+		<div>>
+</div>
 		<div>Read article</div>
+		<div><
+</div>
 		<div>Late Quaternary history of Lammefjorden, Denmark</div>
 		<div>RESEARCH ARTICLE | June 25 2020</div>
 		<div></div>
-		<div>
-</div>
 		<div>REVIEW ARTICLE | May 27 2020</div>
 		<div>Semi-conventional play in the Danish Chalk Group</div>
 		<div>Magnetic susceptibility of ore grades in South Greenland</div>
