--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:100%;height:100%;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?18465"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?6474"></script>
 	</div>
 
 	<!-- end copy -->
@@ -39,18 +39,20 @@
 
 		<div>>
 </div>
-		<div>Read article</div>
+		<div>Mid Jurassic sandstones of the Wandel Sea Basin</div>
+		<div></div>
 		<div><
 </div>
+		<div>RESEARCH ARTICLE | DEC 22 2020</div>
+		<div>Read article</div>
+		<div>Mid Jurassic sandstones of the Wandel Sea Basin</div>
+		<div>Magnetic susceptibility of ore grades in South Greenland</div>
+		<div>RESEARCH ARTICLE | AUG 08 2020</div>
 		<div>Late Quaternary history of Lammefjorden, Denmark</div>
 		<div>RESEARCH ARTICLE | June 25 2020</div>
-		<div></div>
-		<div>REVIEW ARTICLE | May 27 2020</div>
-		<div>Semi-conventional play in the Danish Chalk Group</div>
-		<div>Magnetic susceptibility of ore grades in South Greenland</div>
-		<div>RESEARCH ARTICLE | JUNE 26 2019</div>
-		<div>JOURNAL NEWS | May 27 2020</div>
-		<div>Welcome to the new GEUS Bulletin website!</div>
+		<div>RESEARCH ARTICLE | NOV 09 2020</div>
+		<div>Preliminary landslide mapping in Denmark</div>
+		<div>Preliminary landslide mapping in Denmark</div>
 
 	</div>
 
