--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto&subset=latin' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Roboto:500&subset=latin' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Roboto:700&subset=latin' rel='stylesheet' type='text/css'>
+	<script src="https://kit.fontawesome.com/aaa951c7f5.js" crossorigin="anonymous"></script>	
+
+	
 
 	<!-- end copy -->
   </head>
@@ -26,7 +29,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:100%;height:100%;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?75711"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?84281"></script>
 	</div>
 
 	<!-- end copy -->
@@ -37,22 +40,22 @@
 
 	<div style="display:none" aria-hidden=true>
 
-		<div>>
-</div>
-		<div>Mid Jurassic sandstones of the Wandel Sea Basin</div>
-		<div></div>
-		<div><
-</div>
-		<div>RESEARCH ARTICLE | DEC 21 2020</div>
-		<div>Read article</div>
-		<div>Mid Jurassic sandstones of the Wandel Sea Basin</div>
-		<div>Magnetic susceptibility of ore grades in South Greenland</div>
 		<div>RESEARCH ARTICLE | AUG 08 2020</div>
-		<div>Late Quaternary history of Lammefjorden, Denmark</div>
-		<div>RESEARCH ARTICLE | June 25 2020</div>
+		<div>Magnetic susceptibility of ore grades in South Greenland</div>
+		<div>Read article</div>
+		<div></div>
 		<div>RESEARCH ARTICLE | NOV 09 2020</div>
 		<div>Preliminary landslide mapping in Denmark</div>
 		<div>Preliminary landslide mapping in Denmark</div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div>Peneplains and tectonics in North-East Greenland</div>
+		<div>RESEARCH ARTICLE | JAN 21 2021</div>
+		<div>Mid Jurassic sandstones of the Wandel Sea Basin</div>
+		<div>RESEARCH ARTICLE | DEC 21 2020</div>
+		<div>Mid Jurassic sandstones of the Wandel Sea Basin</div>
 
 	</div>
 
