--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:100%;height:100%;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?84281"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?77123"></script>
 	</div>
 
 	<!-- end copy -->
@@ -40,22 +40,19 @@
 
 	<div style="display:none" aria-hidden=true>
 
-		<div>RESEARCH ARTICLE | AUG 08 2020</div>
-		<div>Magnetic susceptibility of ore grades in South Greenland</div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div>RESEARCH ARTICLE | APR 19 2021</div>
+		<div></div>
 		<div>Read article</div>
-		<div></div>
-		<div>RESEARCH ARTICLE | NOV 09 2020</div>
-		<div>Preliminary landslide mapping in Denmark</div>
-		<div>Preliminary landslide mapping in Denmark</div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div>Peneplains and tectonics in North-East Greenland</div>
+		<div>Validating altimetry data by citizen science</div>
+		<div>Estimating pesticides in public drinking water in Denmark</div>
+		<div>RESEARCH ARTICLE | APR 12 2021</div>
 		<div>RESEARCH ARTICLE | JAN 21 2021</div>
-		<div>Mid Jurassic sandstones of the Wandel Sea Basin</div>
-		<div>RESEARCH ARTICLE | DEC 21 2020</div>
-		<div>Mid Jurassic sandstones of the Wandel Sea Basin</div>
+		<div>Peneplains and tectonics in North-East Greenland</div>
+		<div>Calculating bare-ice albedo in Greenland</div>
 
 	</div>
 
