--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:100%;height:100%;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?25436"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?32064"></script>
 	</div>
 
 	<!-- end copy -->
@@ -44,16 +44,14 @@
 		<div></div>
 		<div></div>
 		<div></div>
-		<div>RESEARCH ARTICLE | MAY 28 2021</div>
-		<div></div>
+		<div>RESEARCH ARTICLE | MAY 11 2022</div>
 		<div>Read article</div>
-		<div>Validating altimetry data by citizen science</div>
-		<div>Estimating pesticides in public drinking water in Denmark</div>
-		<div>RESEARCH ARTICLE | APR 12 2021</div>
-		<div>RESEARCH ARTICLE | JAN 21 2021</div>
-		<div>Peneplains and tectonics in North-East Greenland</div>
-		<div>Calculating bare-ice albedo in Greenland</div>
-		<div>RESEARCH ARTICLE | APR 19 2021</div>
+		<div></div>
+		<div>Karst and palaeokarst of North and North-East Greenland</div>
+		<div>MAP DESCRIPTION | DEC 14 2021</div>
+		<div>New Map Description for Møn, Denmark</div>
+		<div>METHODS ARTICLE | JAN 13 2022</div>
+		<div>Machine learning enhances rainfall-runoff modelling in Denmark</div>
 
 	</div>
 
