--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:100%;height:100%;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?60558"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?7741"></script>
 	</div>
 
 	<!-- end copy -->
@@ -44,16 +44,17 @@
 		<div></div>
 		<div></div>
 		<div></div>
-		<div>RESEARCH ARTICLE | OCT 05 2022</div>
-		<div>Read article</div>
-		<div>Revised sea-level projections for four Danish cities</div>
 		<div></div>
-		<div>RESEARCH ARTICLE | MAY 11 2022</div>
-		<div>Karst and palaeokarst of North and North-East Greenland</div>
-		<div>Danish Water Supply Areas and water production facilities</div>
-		<div>DATA ARTICLE | JUNE 28 2022</div>
-		<div>Evidence for earliest Jurassic rifting in North-East Greenland</div>
-		<div>RESEARCH ARTICLE | AUGUST 25 2022</div>
+		<div>Read article</div>
+		<div>RESEARCH ARTICLE | OCT 05 2022</div>
+		<div>Revised sea-level projections for four Danish cities</div>
+		<div>MONOGRAPH | OCT 10 2022</div>
+		<div>The Tertiary volcanic rocks of Svartenhuk Halvø, West Greenland</div>
+		<div>RESEARCH ARTICLE | DEC 27 2022</div>
+		<div>Mapping seabed geodiversity in Norway</div>
+		<div>Mapping seabed geodiversity in Norway</div>
+		<div>Map description for the island of Møn now in English</div>
+		<div>MAP DESCRIPTION | DEC 16 2022</div>
 
 	</div>
 
